--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,24 @@
-PyQt6
-SQLAlchemy
+datefinder==0.7.3
+Django==5.1
+fitz==0.0.1.dev2
+huggingface_hub==0.26.2
+matplotlib==3.9.2
+networkx==3.4.2
+numpy==1.24.3
+openpyxl==3.1.2
+pandas==2.0.3
+pdfplumber==0.11.4
+Pillow==9.5.0
+Pillow==11.0.0
+plotly==5.24.1
+pypdf==5.1.0
+PyPDF2==3.0.1
+PyQt6==6.7.1
+PyQt6_sip==13.8.0
+python_dateutil==2.9.0
+regex==2024.9.11
+reportlab==3.6.13
+torch==2.5.0
+torchvision==0.20.0
+tqdm==4.66.6
+transformers==4.46.0
