--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,222 @@
+annotated-types==0.7.0
+ansicon==1.89.0
+appnope==0.1.4
+arabic-reshaper==3.0.0
+asgiref==3.8.1
+asn1crypto==1.5.1
+astroid==2.4.2
+asttokens==2.4.1
+attrs==24.2.0
+backcall==0.2.0
+beautifulsoup4==4.12.3
+bleach==6.2.0
+blessed==1.20.0
+blis==1.0.1
+catalogue==2.0.10
+certifi==2023.5.7
+cffi==1.15.1
+chardet==3.0.4
+charset-normalizer==3.1.0
+ci-info==0.3.0
+click==8.1.3
+cloudpathlib==0.20.0
+colorama==0.4.6
+coloredlogs==15.0.1
+confection==0.1.5
+configobj==5.0.9
+configparser==7.1.0
+contourpy==1.3.0
+cryptography==41.0.1
+cssselect2==0.7.0
+cycler==0.12.1
+cymem==2.0.8
 datefinder==0.7.3
+decorator==5.1.1
+defusedxml==0.7.1
+diff-match-patch==20230430
+dj-database-url==0.5.0
 Django==5.1
-fitz==0.0.1.dev2
+django-debug-toolbar==4.1.0
+django-decorator-include==3.0
+django-dotenv==1.4.2
+django-environ==0.10.0
+django-filter==24.3
+django-heroku==0.3.1
+django-import-export==3.2.0
+django-mathfilters==1.0.0
+django-stronghold==0.4.0
+django-widget-tweaks==1.5.0
+djangorestframework==3.15.2
+docopt==0.6.2
+et-xmlfile==1.1.0
+etelemetry==0.3.1
+executing==2.1.0
+fastjsonschema==2.20.0
+filelock==3.16.1
+flatbuffers==24.3.25
+fonttools==4.54.1
+fsspec==2024.10.0
 gliner==0.2.13
-huggingface_hub==0.26.2
+greenlet==3.1.1
+gunicorn==21.2.0
+html5lib==1.1
+httplib2==0.22.0
+huggingface-hub==0.26.2
+humanfriendly==10.0
+idna==3.4
+importlib_resources==6.4.5
+inquirer==3.1.3
+ipython==8.12.3
+isodate==0.6.1
+isort==5.6.4
+jedi==0.19.1
+Jinja2==3.1.4
+jinxed==1.2.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
+kiwisolver==1.4.7
+langcodes==3.4.1
+language_data==1.2.0
+lazy-object-proxy==1.4.3
+looseversion==1.3.0
+lxml==4.9.2
+marisa-trie==1.2.1
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupPy==1.14
+MarkupSafe==3.0.2
 matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mccabe==0.6.1
+mdurl==0.1.2
+mistune==3.0.2
+mpmath==1.3.0
+murmurhash==1.0.10
+mysqlclient==2.1.1
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
 networkx==3.4.2
-numpy==1.24.3
+nibabel==5.3.2
+nipype==1.8.6
+numpy==2.0.2
+numpy-financial==1.0.0
+odfpy==1.4.1
+onnxruntime==1.20.0
 openpyxl==3.1.2
-pandas==2.0.3
+oscrypto==1.3.0
+packaging==23.1
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+pathlib==1.0.1
+pdfkit==0.6.1
+pdfminer.six==20231228
 pdfplumber==0.11.4
-Pillow==11.0.0
+pexpect==4.9.0
+pickleshare==0.7.5
+Pillow==9.5.0
+pipreqs==0.5.0
+platformdirs==4.3.6
 plotly==5.24.1
-pypdf==5.1.0
+preshed==3.0.9
+prompt_toolkit==3.0.48
+protobuf==5.28.3
+prov==2.0.1
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pycparser==2.21
+pydantic==2.9.2
+pydantic_core==2.23.4
+pydot==3.0.2
+Pygments==2.18.0
+pyHanko==0.18.1
+pyhanko-certvalidator==0.22.0
+pylint==2.6.0
+PyMuPDF==1.24.12
+pyparsing==3.2.0
+pypdf==3.9.1
 PyPDF2==3.0.1
+pypdfium2==4.30.0
+pypng==0.20220715.0
 PyQt6==6.7.1
+PyQt6-Charts==6.7.0
+PyQt6-Charts-Qt6==6.7.3
+PyQt6-Qt6==6.7.3
+PyQt6-WebEngine==6.7.0
+PyQt6-WebEngine-Qt6==6.7.3
+PyQt6-WebEngineSubwheel-Qt6==6.7.3
 PyQt6_sip==13.8.0
-python_dateutil==2.9.0
+pyqtgraph==0.13.7
+pyreadline3==3.5.4
+python-bidi==0.4.2
+python-dateutil==2.9.0
+python-dotenv==1.0.1
+python-editor==1.0.4
+pytz==2020.1
+pyxnat==1.6.2
+PyYAML==6.0
+pyzmq==26.2.0
+qrcode==7.4.2
+qt6-applications==6.4.3.2.3
+qt6-tools==6.4.3.1.3
+rdflib==6.3.2
+readchar==4.0.5
+referencing==0.35.1
 regex==2024.9.11
 reportlab==3.6.13
+requests==2.31.0
+rich==13.9.4
+rpds-py==0.20.1
+safetensors==0.4.5
+scipy==1.14.1
+sentencepiece==0.2.0
+shellingham==1.5.4
+shortuuid==1.0.13
+simplejson==3.19.3
+six==1.16.0
+smart-open==7.0.5
+soupsieve==2.6
+spacy==3.8.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SQLAlchemy==2.0.36
+sqlparse==0.4.2
+srsly==2.4.8
+stack-data==0.6.3
+svglib==1.5.1
+sympy==1.13.1
+tablib==3.4.0
+tenacity==9.0.0
+thinc==8.3.2
+tinycss2==1.2.1
+tokenizers==0.20.1
+toml==0.10.1
 torch==2.5.0
 torchvision==0.20.0
+tornado==6.4.1
 tqdm==4.66.6
+traitlets==5.14.3
+traits==6.3.2
 transformers==4.46.0
-spacy
+typer==0.12.5
+typing_extensions==4.12.2
+tzdata==2024.1
+tzlocal==5.0.1
+uritools==4.0.1
+urllib3==2.0.3
+wasabi==1.1.3
+wcwidth==0.2.6
+weasel==0.4.1
+webencodings==0.5.1
+whitenoise==6.7.0
+wrapt==1.12.1
+xhtml2pdf==0.2.11
+xlrd==2.0.1
+xlwt==1.3.0
+yarg==0.1.9
